# rule-based-model-builder

./: README.md  SodaPointParse.txt  engine.py  pyproject.toml  template_mappings.py
bodge/: engine.py
examples/cobie/: README.md  cobie.py
examples/smc/: metadata.csv  smc.py
examples/soda/: rows.json  soda.py
examples/soda/prepare/: find_point_templates.py
